<resources>
    <string name="app_name">PASPOR STIKES</string>

    <!--Login Page String-->
    <string name="login_welcome_bold">Selamat Datang</string>
    <string name="login_welcome_normal">masukkan data anda di bawah ini</string>

    <!--Intro Page String-->
    <string name="title_introduction">Kelola kehadiran dan data akademik Anda dengan lebih mudah dan efisien!</string>
    <string name="sub_title_introduction">sistem informasi akademik</string>
    <string name="string_memulai">Memulai</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Password</string>

    <!-- Dashboard Page String -->
    <string name="dashboard_title">Beranda</string>
    <string name="dashboard_welcome">Selamat Datang!</string>
    <string name="dashboard_upcoming_schedules">Jadwal yang akan datang</string>
    <string name="dashboard_list_resume">Ringkasan Kehadiran</string>
    <string name="dashboard_news_now">Berita Hari Ini</string>
    <string name="dashboard_lainnya">Lainnya</string>
    <string name="user_fullname">Marcello Ilham</string>
    <string name="user_major">S1 - Informatika</string>
    <string name="user_id">221111029</string>
    <string name="user_email">221111029@mhs.stiki.ac.id</string>
    <string name="user_semester">5</string>
    
    <string name="user_id_text">NRP</string>
    <string name="user_email_text">Email</string>
    <string name="user_semester_text">Semester</string>
    <string name="user_colon">:</string>

    <string name="button_notification">Notification Button</string>
    <string name="button_menu">Menu Button</string>
    <string name="button_scan">Scan QR Button</string>
    <string name="button_profile">Profile Button</string>
    <string name="dash_mitra">Mitra Kami</string>
    <string name="rskm_id">Logo RSKM</string>
    <string name="rsud_id">Logo RSUD</string>

    <!-- Profile Page String -->
    <string name="button_back_profile">Back Button</string>
    <string name="profile_title">Profile</string>
    <string name="button_notification_profile">Notification Button</string>
    <string name="profile_user_name">Marcello Ilham</string>
    <string name="profile_user_id">221111029</string>
    <string name="profile_user_gpa">3.95</string>
    <string name="profile_user_sks">104</string>
    <string name="profile_user_status">Aktif</string>
    <string name="profile_back_button">Back Button Profile</string>

    <string name="profile_gpa_text">GPA</string>
    <string name="profile_sks_text">SKS LULUS</string>
    <string name="profile_status_text">STATUS</string>
    <string name="data_private_btn">Private Data Button</string>
    <string name="data_academic_btn">Academic Data Button</string>

    <string name="data_academic_user_title">Ringkasan Akademik</string>
    <string name="data_lecture_wali_user">Dosen Wali</string>
    <string name="data_major_user">Program Studi</string>
    <string name="data_entry_year_user">Tahun Masuk</string>
    <string name="data_total_nilai_user">Total Nilai</string>
    <string name="data_email_collage_user">Email Kampus</string>

    <string name="data_lecture_wali_user_dummy">Sukijat, S.Kep., M.Pd</string>
    <string name="data_major_user_dummy">Ilmu Padi</string>
    <string name="data_entry_year_user_dummy">2022</string>
    <string name="data_total_nilai_user_dummy">350.0</string>
    <string name="data_email_collage_user_dummy">221111023@mhs.stikes.ac.id</string>


    <!-- TODO: Remove or change this placeholder text -->

    <!-- Notification Page String -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_title">Notification</string>
    <string name="notification_back_button">Back Button Notification</string>


    <!-- History Page String -->
    <string name="history_title">Riwayat Pertemuan</string>
    <string name="history_hadir_value">9</string>
    <string name="history_tidak_hadir_value">2</string>
    <string name="history_sakit_value">0</string>
    <string name="history_total_value">11 / 16</string>

    <string name="history_hadir_text">Hadir</string>
    <string name="history_tidak_hadir_text">Alpha</string>
    <string name="history_sakit_text">Sakit</string>
    <string name="history_total_text">Total</string>

    <string name="history_informasi_teks">Informasi Pertemuan</string>

    <string name="history_recycler_pertemuan_text">Pertemuan</string>
    <string name="history_recycler_tanggal_text">Tanggal</string>
    <string name="history_recycler_status_text">Status</string>

    <string name="history_back_button">Back Button History</string>


    <!-- Jadwal Page String -->
    <string name="jadwal_title">Jadwal Kuliah</string>
    <string name="jadwal_back_button">Back Button</string>
    <string name="jadwal_on_going_btn">On Going</string>
    <string name="jadwal_completed_btn">Completed</string>

    <string name="jadwal_card_course_hour">08.00–10.00</string>
    <string name="jadwal_card_course_name">Manajemen Sawit</string>
    <string name="jadwal_card_course_lecture">Mahfud Anjasmara, M.kep</string>
    <string name="jadwal_card_course_room">B.2.1</string>

    <string name="jadwal_status_all">Semua</string>
    <string name="jadwal_status_mandatory">Wajib</string>
    <string name="jadwal_status_elective">Pilihan</string>

    <string name="jadwal_on_monday">Senin</string>
    <string name="jadwal_on_tuesday">Selasa</string>
    <string name="jadwal_on_wednesday">Rabu</string>
    <string name="jadwal_on_thursday">Kamis</string>
    <string name="jadwal_on_friday">Jumat</string>

    <string name="jadwal_com_course_name">Desain Sawah</string>
    <string name="jadwal_com_course_kode">M1K28OP</string>
    <string name="jadwal_com_course_sifat">Wajib</string>
    <string name="jadwal_com_course_sks">3</string>
    <string name="jadwal_com_course_value">A+</string>

    <string name="jadwal_com_course_kode_text">Kode</string>
    <string name="jadwal_com_course_sifat_text">Sifat</string>
    <string name="jadwal_com_course_sks_text">SKS</string>
    <string name="jadwal_com_course_value_text">Nilai</string>

    <string name="jadwal_jam8">08.00</string>

    <!--Resume Fragment Page String-->
    <string name="resume_title">Ringkasan Kehadiran</string>
    <string name="resume_semester">Semester 1</string>
    <string name="resume_lesson_name">Penakaran Haji Ahmad dalam Reproduksi Tanaman Dikotil</string>
    <string name="resume_lecture_name">Dr. Sukiman Radjadiningrat</string>

    <string name="resume_attend_text">Hadir</string>
    <string name="resume_alpha_text">Alpha</string>
    <string name="resume_sick_text">Sakit</string>
    <string name="resume_total_text">Total</string>

    <string name="resume_attend_dummy">9</string>
    <string name="resume_alpha_dummy">2</string>
    <string name="resume_sick_dummy">0</string>
    <string name="resume_total_dummy">11</string>

    <!-- News Fragment Page String -->
    <string name="news_page_title">Berita Hari Ini</string>
    <string name="news_card_writer">Marcello Ilham</string>
    <string name="news_card_title">Penambahan jadwal kuliah di semester genap 2024/2025</string>
    <string name="news_card_date">December 08, 2025</string>
    <string name="news_card_picture">News Picture</string>


</resources>