<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:background="@drawable/bg_main"
    tools:context=".main.RiwayatActivity">

    <ImageButton
        android:id="@+id/btn_back_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/history_back_button"
        android:src="@drawable/baseline_arrow_back_ios_new_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/history_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@color/new_green"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_hadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/history_hadir_value"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/history_hadir_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@color/new_blue"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_tidak_hadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/history_tidak_hadir_value"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/history_tidak_hadir_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@color/new_red"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_sakit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/history_sakit_value"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/history_sakit_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_informasi_teks"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/new_grey3"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/history_recycler_pertemuan_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/history_recycler_tanggal_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/history_recycler_status_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_history"
            tools:listitem="@layout/list_history_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>