<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/new_purple"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jadwal_course_completed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jadwal_card_course_name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:background="@color/new_purple2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_kode_text"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_sifat_text"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_sks_text"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_value_text"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/jadwal_course_completed_code"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_kode"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semi_bold"/>

                    <TextView
                        android:id="@+id/jadwal_course_completed_sifat"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_sifat"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semi_bold"/>

                    <TextView
                        android:id="@+id/jadwal_course_completed_sks"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_sks"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semi_bold"/>

                    <TextView
                        android:id="@+id/jadwal_course_completed_nilai"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_com_course_value"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semi_bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>