<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main2"
    tools:context=".main.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_profile_main"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient_main_color"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_gpa_profile"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/profile_user_gpa"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@color/new_brown"/>

                <TextView
                    android:id="@+id/user_sks_profile"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/profile_user_sks"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@color/new_brown"/>

                <TextView
                    android:id="@+id/user_status_profile"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/profile_user_status"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile_gpa_text"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="25dp"
                    android:layout_gravity="top"
                    android:background="@color/new_brown"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile_sks_text"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="25dp"
                    android:layout_gravity="top"
                    android:background="@color/new_brown"/>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile_status_text"
                    android:textAlignment="center"
                    android:textColor="@color/new_brown"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_back_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_back_button"
        android:paddingTop="20dp"
        android:src="@drawable/baseline_arrow_back_ios_new_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingTop="20dp"
        android:text="@string/profile_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/dummy_face"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/profile_user_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image_profile" />

    <TextView
        android:id="@+id/user_id_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/profile_user_id"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:background="@color/new_grey4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>