<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/news_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dummy_face" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_writter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/news_card_writer"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/news_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/news_card_title"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/news_card_date"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>