<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/board_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/history_pertemuan_ke"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/history_recycler_pertemuan_text"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/history_tanggal_ke"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/history_recycler_tanggal_text"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/history_status_ke"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/history_recycler_status_text"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/history_report_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_report_24"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_grey2"
        app:layout_constraintTop_toBottomOf="@+id/board_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>